--- a/memoria/Bibliografia.bib
+++ b/memoria/Bibliografia.bib
@@ -10,6 +10,11 @@
 	howpublished = {\url{https://github.com/tensorflow/tensorflow}},
 % 	note = "[Accedido 22 de Junio de 2019]"
 }
+@misc{github_dataset,
+	title = "{\textit{Dataset} de imágenes de \textit{websim}}",
+	howpublished = {\url{https://github.com/aitormf/websim_person_dataset}},
+}
+
 @misc{kibotics,
   author = {Asociación de robótica e inteligencia artificial JdeRobot},
   title = {Kibotics},
