--- a/memoria/capitulos/0-Acronimos.tex
+++ b/memoria/capitulos/0-Acronimos.tex
@@ -16,3 +16,4 @@
 \newacronym{svm}{SVM}{Support Vector Machine}
 \newacronym{voc}{VOC}{PASCAL Visual Object Classes Challenge}
 \newacronym{sdk}{SDK}{software development kit}
+\newacronym{glb}{GLB}{binary graphic library transmission format}
