--- a/memoria/capitulos/4-Herramientas.tex
+++ b/memoria/capitulos/4-Herramientas.tex
@@ -82,7 +82,7 @@ Es un pequeño drone (figura \ref{fig:tello}) fabricado por la empresa DJI \foot
 		\label{fig:tello}
 		\end{center}
 \end{figure}
-\section{Mixamo}
+\section{Mixamo}\label{sec:mixamo}
 \textit{Mixamo}~\cite{mixamo} es una empresa del grupo \textit{Adobe Systems} que desarrolla y vende servicios basados en la web para la animación de personajes en 3D. Utilizan métodos de \textit{Machine Learning} para automatizar los pasos del proceso de animación de personajes, incluyendo desde el modelado 3D hasta la animación 3D. Desde su web ofrecen modelos y animaciones gratuitos (\ref{fig.mixamo}).
 \begin{figure}[H]
   \begin{center}
@@ -92,7 +92,7 @@ Es un pequeño drone (figura \ref{fig:tello}) fabricado por la empresa DJI \foot
 		\end{center}
 \end{figure}
 En este proyecto se ha usado para obtener los modelos de las personas para la versión simulada.
-\section{Blender}
+\section{Blender} \label{sec:blender}
 \textit{Blender}\footnote{\url{https://www.blender.org}} (figura \ref{fig:blender}) es un programa dedicado especialmente al modelado, iluminación, renderizado, animación y creación de gráficos tridimensionales.
 
 Inicialmente fue distribuido de forma gratuita pero sin el código fuente. Posteriormente pasó a ser software libre. Actualmente es compatible con todas las versiones de Windows, macOS, GNU/Linux (incluyendo Android), Solaris, FreeBSD e IRIX.
